[gd_scene load_steps=42 format=3 uid="uid://dheqtn1kojh0k"]

[ext_resource type="Script" uid="uid://b8ssqngqyvpif" path="res://Enemies/Test Boss/boss.gd" id="1_we8h1"]
[ext_resource type="Texture2D" uid="uid://c8vqmjjkv677e" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack01.png" id="2_kvofc"]
[ext_resource type="Texture2D" uid="uid://hafcb8vur1ww" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack02.png" id="3_ef0k6"]
[ext_resource type="Texture2D" uid="uid://cj0ai7fqeq0r4" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Death.png" id="4_ry61v"]
[ext_resource type="Texture2D" uid="uid://drhq5pfigc013" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Idle.png" id="5_kles1"]
[ext_resource type="Texture2D" uid="uid://dpep50hlw8um" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Hurt.png" id="6_etj48"]
[ext_resource type="Script" uid="uid://dburc6f74ny5x" path="res://NotResolvedYet/area_2d.gd" id="7_kvofc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3lj5"]
atlas = ExtResource("2_kvofc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1j2"]
atlas = ExtResource("2_kvofc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_km2bi"]
atlas = ExtResource("2_kvofc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0duv"]
atlas = ExtResource("2_kvofc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc4na"]
atlas = ExtResource("2_kvofc")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arul"]
atlas = ExtResource("2_kvofc")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d2wm"]
atlas = ExtResource("3_ef0k6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrd6h"]
atlas = ExtResource("3_ef0k6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g8a4"]
atlas = ExtResource("3_ef0k6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8fku"]
atlas = ExtResource("3_ef0k6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jruke"]
atlas = ExtResource("3_ef0k6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysc7m"]
atlas = ExtResource("3_ef0k6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ke2s"]
atlas = ExtResource("4_ry61v")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppmbc"]
atlas = ExtResource("4_ry61v")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw08n"]
atlas = ExtResource("4_ry61v")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdfxm"]
atlas = ExtResource("4_ry61v")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm1kr"]
atlas = ExtResource("5_kles1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akhi5"]
atlas = ExtResource("5_kles1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwlhh"]
atlas = ExtResource("5_kles1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvkcc"]
atlas = ExtResource("5_kles1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oehbi"]
atlas = ExtResource("5_kles1")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3701"]
atlas = ExtResource("5_kles1")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b5wb"]
atlas = ExtResource("6_etj48")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeb72"]
atlas = ExtResource("6_etj48")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdn2a"]
atlas = ExtResource("6_etj48")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvoe5"]
atlas = ExtResource("6_etj48")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvofc"]
atlas = ExtResource("2_kvofc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_x1mfc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3lj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km2bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0duv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arul")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrd6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g8a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8fku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jruke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysc7m")
}],
"loop": false,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ke2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppmbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw08n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdfxm")
}],
"loop": true,
"name": &"Dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm1kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akhi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwlhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvkcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oehbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3701")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b5wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeb72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdn2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvoe5")
}],
"loop": true,
"name": &"Staggered",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}],
"loop": false,
"name": &"Windup",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vomys"]
size = Vector2(94, 112.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cas4q"]
size = Vector2(114, 108)

[sub_resource type="CircleShape2D" id="CircleShape2D_ef0k6"]
radius = 64.7611

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvofc"]
size = Vector2(93, 111)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvofc"]
bg_color = Color(0.978767, 0.922439, 0.936088, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef0k6"]
bg_color = Color(1, 0, 0, 1)

[node name="Boss" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_we8h1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.00003, 1.52588e-05)
scale = Vector2(6.03, 6.87)
sprite_frames = SubResource("SpriteFrames_x1mfc")
animation = &"Attack1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vomys")

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(106, 0)
shape = SubResource("RectangleShape2D_cas4q")

[node name="Area2D" type="Area2D" parent="." groups=["parryable"]]
script = ExtResource("7_kvofc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(108, -2)
shape = SubResource("CircleShape2D_ef0k6")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_kvofc")

[node name="PostureBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = -71.0
offset_right = 48.0
offset_bottom = -61.0
theme_override_colors/font_color = Color(0.941176, 1, 0.972549, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0.0745098, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_kvofc")
theme_override_styles/fill = SubResource("StyleBoxFlat_ef0k6")
max_value = 3.0
show_percentage = false

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
